cmake_minimum_required (VERSION 2.6)

add_library(axis_ptz src/ptz.cpp)

FIND_PACKAGE(CURL)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})

FIND_PACKAGE(BOOST)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})

target_include_directories(axis_ptz PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CURL_LIBRARIES} ${BOOST_LIBRARIES})